--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: vyatta-dhcp3
 Section: net
 Priority: important
 Maintainer: Marat Nepomnyashy <marat@vyatta.com>
-Uploaders: Mattt Zimmerman <mdz@debian.org>, Andrew Pollock <apollock@debian.org>, Eloy A. Paris <peloy@debian.org>
+Uploaders: Matt Zimmerman <mdz@debian.org>, Andrew Pollock <apollock@debian.org>, Eloy A. Paris <peloy@debian.org>
 Build-Depends: debhelper (>= 4.1.16), dpkg-dev (>= 1.13.2), groff, dpatch, po-debconf
 Standards-Version: 3.7.2.2
 
