Applied Debian Lenny package patches to archived code.

--- a/Makefile.conf
+++ b/Makefile.conf
@@ -42,8 +42,8 @@ CATMANPAGES =
 ETC = /etc
 VARRUN = /var/run
 VARDB = /var/db
-LIBDIR=/usr/local/lib
-INCDIR=/usr/local/include
+LIBDIR=/usr/lib
+INCDIR=/usr/include
 LIBS =
 COPTS = $(BINDDEF) $(CC_OPTIONS)
 DEBUG = -g
@@ -314,18 +314,19 @@ MINORVERSION=MinorVersion
 ##--linux-2.2--
 #COPTS = -DLINUX_MAJOR=$(MAJORVERSION) -DLINUX_MINOR=$(MINORVERSION) \
 #        $(BINDDEF) $(CC_OPTIONS)
+#ETC = /etc/dhcp3
 #CF = cf/linux.h
-#ADMMANDIR = /usr/man/man8
+#ADMMANDIR = /usr/share/man/man8
 #ADMMANEXT = .8
-#FFMANDIR = /usr/man/man5
+#FFMANDIR = /usr/share/man/man5
 #FFMANEXT = .5
-#LIBMANDIR = /usr/man/man3
+#LIBMANDIR = /usr/share/man/man3
 #LIBMANEXT = .3
-#USRMANDIR = /usr/man/man1
+#USRMANDIR = /usr/share/man/man1
 #USRMANEXT = .1
 #MANCAT = man
 #VARRUN = /var/run
-#VARDB = /var/state/dhcp
+#VARDB = /var/lib/dhcp3
 #SCRIPT=linux
 ##--linux-2.2--
 
