--- a/dst/Makefile.dist
+++ b/dst/Makefile.dist
@@ -30,12 +30,24 @@ CFLAGS = $(DEBUG) $(PREDEFINES) $(INCLUDES) $(COPTS) -DHMAC_MD5 -DMINIRES_LIB
 
 all:	libdst.a
 
-install:
-
 libdst.a:	$(OBJ)
 	rm -f dst.a
 	ar cruv libdst.a $(OBJ)
 	$(RANLIB) libdst.a
+
+install: all
+	for dir in $(LIBDIR);\
+	 do \
+	  foo=""; \
+	  for bar in `echo $(DESTDIR)$${dir} |tr / ' '`; do \
+	    foo=$${foo}/$$bar; \
+	    if [ ! -d $$foo ]; then \
+	      mkdir $$foo; \
+	      chmod 755 $$foo; \
+	    fi; \
+	  done; \
+	done
+	$(INSTALL) libdst.a $(DESTDIR)$(LIBDIR)
 
 depend:
 	$(MKDEP) $(INCLUDES) $(PREDEFINES) $(SRC)
