--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,10 @@ Standards-Version: 3.7.2.2
 Package: vyatta-dhcp3-server
 Priority: optional
 Architecture: any
-Depends: debianutils (>= 2.8.2), vyatta-dhcp3-common (= ${Source-Version}), ${shlibs:Depends}, ${misc:Depends}
+Depends: debianutils (>= 2.8.2),
+ vyatta-dhcp3-common (= ${Source-Version}),
+ ${shlibs:Depends},
+ ${misc:Depends}
 Conflicts: dhcp, dhcp3-server
 Description: Vyattanized DHCP server for automatic IP address assignment
  This is the server from version 3 of the Internet Software
@@ -26,7 +29,9 @@ Description: Vyattanized DHCP server for automatic IP address assignment
 Package: vyatta-dhcp3-common
 Architecture: any
 Section: net
-Depends: debianutils (>= 2.8.2), ${shlibs:Depends}, ${misc:Depends}
+Depends: debianutils (>= 2.8.2),
+ ${shlibs:Depends},
+ ${misc:Depends}
 Conflicts: dhcp3-common
 Description: Vyattanized common files used by all the vyatta-dhcp3* packages
  This package contains the files used by all the packages from the Vyattanized ISC
@@ -44,7 +49,10 @@ Description: Vyattanized API for accessing and modifying the DHCP server and cli
 
 Package: vyatta-dhcp3-client
 Architecture: any
-Depends: debianutils (>= 2.8.2), vyatta-dhcp3-common (= ${Source-Version}), ${shlibs:Depends}, ${misc:Depends}
+Depends: debianutils (>= 2.8.2),
+ vyatta-dhcp3-common (= ${Source-Version}),
+ ${shlibs:Depends},
+ ${misc:Depends}
 Suggests: resolvconf, avahi-autoipd
 Conflicts: dhcp-client (<< 3.0), samba-common (<< 3.0.0beta1-2), dhcp3-client
 Description: Vyattanized DHCP client
@@ -75,7 +83,10 @@ Description: Vyattanized DHCP Client for debian-installer
 Package: vyatta-dhcp3-relay
 Priority: optional
 Architecture: any
-Depends: debianutils (>= 2.8.2), vyatta-dhcp3-common (= ${Source-Version}), ${shlibs:Depends}, ${misc:Depends}
+Depends: debianutils (>= 2.8.2),
+ vyatta-dhcp3-common (= ${Source-Version}),
+ ${shlibs:Depends},
+ ${misc:Depends}
 Conflicts: dhcp-relay, dhcp3-relay
 Description: Vyattanized DHCP relay daemon
  This is the relay from version 3 of the Internet Software
