--- a/debian/rules
+++ b/debian/rules
@@ -183,7 +183,11 @@ binary-arch: build install
 	dh_fixperms -a
 	dh_installdeb -a 
 	dh_shlibdeps -a
-	dh_gencontrol -a 
+	if [ -f "../.VYATTA_DEV_BUILD" ]; then \
+		dh_gencontrol -a -- -v999.dev; \
+	else \
+		dh_gencontrol -a; \
+	fi
 #	dh_makeshlibs -a
 	dh_md5sums -a --no-package=vyatta-dhcp3-client-udeb
 	dh_builddeb -a 
