cleanup ignored files list

--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,26 @@
+# standard debris
+.*
+*.o
+*.o.*
+*.a
+*.s
+*.ko
+*.so
+*.gz
+*.orig
+*~
+\#*#
+tags
+TAGS
+!.gitignore
+!.mailmap
+
+# cscope files
+cscope.*
+ncscope.*
+
+# debian
 build-stamp
-debian/files
-debian/patched
-debian/tmp
-debian/vyatta-dhcp3-client-udeb.substvars
-debian/vyatta-dhcp3-client-udeb
-debian/vyatta-dhcp3-client.postrm.debhelper
-debian/vyatta-dhcp3-client.substvars
-debian/vyatta-dhcp3-client
-debian/vyatta-dhcp3-common.substvars
-debian/vyatta-dhcp3-common
-debian/vyatta-dhcp3-dev
-debian/vyatta-dhcp3-relay.postrm.debhelper
-debian/vyatta-dhcp3-relay.substvars
-debian/vyatta-dhcp3-relay
-debian/vyatta-dhcp3-server.postrm.debhelper
-debian/vyatta-dhcp3-server.substvars
-debian/vyatta-dhcp3-server
-debian/vyatta-dhcp3-client-udeb.debhelper.log
-debian/vyatta-dhcp3-client.debhelper.log
-debian/vyatta-dhcp3-common.debhelper.log
-debian/vyatta-dhcp3-dev.debhelper.log
-debian/vyatta-dhcp3-relay.debhelper.log
-debian/vyatta-dhcp3-server.debhelper.log
 install-stamp
 patch-stamp
 work.linux-2.2
