Set explicit path for dhcp ipv6 info
The ISC code uses /var/db, but Linux/Debian uses /var/lib/dhcp3.
The support for IPV6 was added but paths for DHCPD6 were not added.

Also: add GNU_SOURCE flag so package will build on systems where
in6_pktinfo is only defined in netinet/in.h under ifdef GNU

--- a/debian/rules
+++ b/debian/rules
@@ -14,7 +14,7 @@ PACKAGE = vyatta-dhcp3
 
 include /usr/share/dpatch/dpatch.make
 
-CFLAGS = -Wall -g
+CFLAGS = -Wall -g -D_GNU_SOURCE
 INSTALL = install
 INSTALL_FILE 	= $(INSTALL) -p -o root -g root -m 644
 INSTALL_PROGRAM = $(INSTALL) -p -o root -g root -m 755
@@ -31,7 +31,9 @@ endif
 IVARS = DESTDIR=$(DESTDIR)
 
 BVARS = PREDEFINES='-D_PATH_DHCPD_DB=\"/var/lib/dhcp3/dhcpd.leases\" \
+	-D_PATH_DHCCP_DB=\"/var/lib/dhcp3/dhcp6.leases\" \
 	-D_PATH_DHCLIENT_DB=\"/var/lib/dhcp3/dhclient.leases\" \
+	-D_PATH_DHCLIENT6_DB=\"/var/lib/dhcp3/dhclient6.leases\" \
 	-D_PATH_DHCLIENT_SCRIPT=\"/sbin/dhclient-script\" \
 	-D_PATH_DHCPD_CONF=\"/etc/dhcp3/dhcpd.conf\" \
         -D_PATH_DHCLIENT_CONF=\"/etc/dhcp3/dhclient.conf\"'
