--- a/debian/rules
+++ b/debian/rules
@@ -24,19 +24,21 @@ CFLAGS += -O0
 else
 CFLAGS += -O2
 endif
+
+CFLAGS += -D_PATH_DHCPD_DB=\"/var/lib/dhcp3/dhcpd.leases\"
+CFLAGS += -D_PATH_DHCPD6_DB=\"/var/lib/dhcp3/dhcp6.leases\"
+CFLAGS += -D_PATH_DHCLIENT_DB=\"/var/lib/dhcp3/dhclient.leases\"
+CFLAGS += -D_PATH_DHCLIENT6_DB=\"/var/lib/dhcp3/dhclient6.leases\"
+CFLAGS += -D_PATH_DHCLIENT_SCRIPT=\"/sbin/dhclient-script\"
+CFLAGS += -D_PATH_DHCPD_CONF=\"/etc/dhcp3/dhcpd.conf\"
+CFLAGS += -D_PATH_DHCLIENT_CONF=\"/etc/dhcp3/dhclient.conf\"
+
+
 ifeq (,$(findstring nostrip,$(DEB_BUILD_OPTIONS)))
 INSTALL_PROGRAM += -s
 endif
 
 IVARS = DESTDIR=$(DESTDIR)
-
-BVARS = PREDEFINES='-D_PATH_DHCPD_DB=\"/var/lib/dhcp3/dhcpd.leases\" \
-	-D_PATH_DHCPD6_DB=\"/var/lib/dhcp3/dhcp6.leases\" \
-	-D_PATH_DHCLIENT_DB=\"/var/lib/dhcp3/dhclient.leases\" \
-	-D_PATH_DHCLIENT6_DB=\"/var/lib/dhcp3/dhclient6.leases\" \
-	-D_PATH_DHCLIENT_SCRIPT=\"/sbin/dhclient-script\" \
-	-D_PATH_DHCPD_CONF=\"/etc/dhcp3/dhcpd.conf\" \
-        -D_PATH_DHCLIENT_CONF=\"/etc/dhcp3/dhclient.conf\"'
 
 
 #patch: patch-stamp
@@ -57,7 +59,7 @@ build-stamp:
 	./configure --prefix=/usr
 	#CFLAGS="$(CFLAGS)" sh -x debian/scripts/insert_cflags.sh patch
 	#cat site.conf
-	$(MAKE) $(BVARS) 
+	$(MAKE)
 
 	touch build-stamp
 
