--- a/debian/rules
+++ b/debian/rules
@@ -14,7 +14,7 @@ PACKAGE = vyatta-dhcp3
 
 include /usr/share/dpatch/dpatch.make
 
-CFLAGS = -Wall -g -D_GNU_SOURCE
+CFLAGS = -Wall -g -D_GNU_SOURCE -fstack-protector
 INSTALL = install
 INSTALL_FILE 	= $(INSTALL) -p -o root -g root -m 644
 INSTALL_PROGRAM = $(INSTALL) -p -o root -g root -m 755
