--- a/debian/rules
+++ b/debian/rules
@@ -15,9 +15,13 @@ PACKAGE = vyatta-dhcp3
 include /usr/share/dpatch/dpatch.make
 
 CFLAGS = -Wall -g -D_GNU_SOURCE -fstack-protector
+
 INSTALL = install
 INSTALL_FILE 	= $(INSTALL) -p -o root -g root -m 644
 INSTALL_PROGRAM = $(INSTALL) -p -o root -g root -m 755
+
+CFLAGS += -fstack-protector -fPIE
+LDFLAGS += -pie
 
 ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
 CFLAGS += -O0
