--- a/includes/config.h.in
+++ b/includes/config.h.in
@@ -133,6 +133,12 @@
 /* Define to include server activity tracing support. */
 #undef TRACING
 
+/* Define to 1 to use the standard BSD socket API. */
+#undef USE_SOCKETS
+
+/* Define to 1 to enable IPv4 packet info support. */
+#undef USE_V4_PKTINFO
+
 /* Version number of package */
 #undef VERSION
 
@@ -174,6 +180,9 @@
 
 /* File for dhcpd process information. */
 #undef _PATH_DHCPD_PID
+
+/* File for dhcrelay6 process information. */
+#undef _PATH_DHCRELAY6_PID
 
 /* File for dhcrelay process information. */
 #undef _PATH_DHCRELAY_PID
