--- a/common/tests/Makefile.am
+++ b/common/tests/Makefile.am
@@ -1,6 +1,6 @@
 SUBDIRS = .
 
-AM_CPPFLAGS = $(ATF_CFLAGS) -std=c99 -I$(top_srcdir)/includes
+AM_CPPFLAGS = $(ATF_CFLAGS) -I$(top_srcdir)/includes
 
 EXTRA_DIST = Atffile
 
