--- a/server/tests/Makefile.am
+++ b/server/tests/Makefile.am
@@ -1,8 +1,8 @@
 SUBDIRS = .
 
 AM_CPPFLAGS = $(ATF_CFLAGS) -DUNIT_TEST -I$(top_srcdir)/includes
-AM_CPPFLAGS += -std=c99 -I$(top_srcdir)/bind/include -I$(top_srcdir)
-AM_CPPFLAGS += -DLOCALSTATEDIR='"."' -Wno-unused-function -Wno-error=unused-variable
+AM_CPPFLAGS += -I$(top_srcdir)/bind/include -I$(top_srcdir)
+AM_CPPFLAGS += -DLOCALSTATEDIR='"."'
 
 EXTRA_DIST = Atffile
 
@@ -28,7 +28,7 @@ if HAVE_ATF
 check: $(ATF_TESTS)
 	atf-run | atf-report
 
-ATF_TESTS += dhcpd_unittests legacy_unittests hash_unittests
+ATF_TESTS += dhcpd_unittests legacy_unittests hash_unittests load_bal_unittests
 
 dhcpd_unittests_SOURCES = $(DHCPSRC)
 dhcpd_unittests_SOURCES += simple_unittest.c
@@ -45,6 +45,9 @@ hash_unittests_LDADD = $(DHCPLIBS) $(ATF_LDFLAGS)
 # This is a legacy unittest. It replaces main() with something that was in mdb6.c
 legacy_unittests_SOURCES = $(DHCPSRC) mdb6_unittest.c
 legacy_unittests_LDADD = $(DHCPLIBS) $(ATF_LDFLAGS)
+
+load_bal_unittests_SOURCES = $(DHCPSRC) load_bal_unittest.c
+load_bal_unittests_LDADD = $(DHCPLIBS) $(ATF_LDFLAGS)
 
 endif
 
