--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: vyatta-dhcp3
 Section: net
 Priority: important
-Maintainer: Vyatta Package Maintainers <maintainers@vyatta.com>
+Maintainer: VyOs Maintainers <maintainers@so3group.net>
 Build-Depends: debhelper (>= 5), dpkg-dev (>= 1.13.2), po-debconf
 Standards-Version: 3.7.2.2
 
